apps/example/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example
          image: ghcr.io/crgeary/alpha-example:main
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "200m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
