apps/example/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: alpha.k8s.local
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: example-service
                port:
                  number: 4000
